workspace = { members = ["page-builder"] }
[package]
name = "astraea-moj"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-identity = "0.6.0"
actix-rt = "2.9.0"
actix-session = {version = "0.8.0", features = ["cookie-session"] }
actix-web = "4.4.0"
rayon = "1.8.0"
serde = "1.0.193"
serde_json = "1.0.108"
